--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "gulp-if": "^1.2.5",
     "gulp-inject": "^1.1.1",
     "gulp-jsbeautifier": "0.0.4",
-    "gulp-stylus": "^2.5.0",
     "gulp-sourcemaps": "^1.2.8",
+    "gulp-stylus": "^2.5.0",
     "gulp-uglify": "^1.0.2",
     "http-server": "latest",
+    "install": "^0.12.2",
+    "npm": "^6.8.0",
     "run-sequence": "^1.0.2"
   },
   "scripts": {
